# invar

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
conformance/: README.md  vectors.json
crates/forge-backend/: Cargo.toml
crates/forge-backend/src/: lib.rs  main.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: amount.rs  capability.rs  crypto.rs  error.rs  hold.rs  ledger.rs  lib.rs  multisig.rs  reserve.rs  service.rs
crates/forge-crypto/: Cargo.toml
crates/forge-crypto/src/: glue.rs  kek.rs  keystore.rs  lib.rs  provider.rs
crates/forge-crypto/tests/: conformance.rs
crates/forge-ledger-custodial/: Cargo.toml
crates/forge-ledger-custodial/src/: lib.rs
crates/invar-backend/: Cargo.toml
crates/invar-backend/src/: lib.rs  main.rs
crates/invar-core/: Cargo.toml
crates/invar-core/src/: account.rs  allowance.rs  amount.rs  capability.rs  crypto.rs  error.rs  ledger.rs  lib.rs  multisig.rs  reserve.rs  roles.rs  service.rs  token.rs
crates/invar-crypto/: Cargo.toml
crates/invar-crypto/src/: glue.rs  kek.rs  keystore.rs  lib.rs  provider.rs
crates/invar-crypto/tests/: conformance.rs
crates/invar-ledger-custodial/: Cargo.toml
crates/invar-ledger-custodial/src/: lib.rs
crates/invar-ledger-sqlite/: Cargo.toml
crates/invar-ledger-sqlite/src/: lib.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FIPS-PQC.md  ROADMAP.md  THREAT-MODEL.md
go/: go.mod
go/cli/: main.go  main_test.go
go/crypto/: glue.go  glue_test.go  mlkem.go
go/ledger-dlt/: adapter.go  adapter_test.go
scripts/: run.sh  smoke-test.sh
web/: .npmrc  README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts
