[package]
name = "forge-backend"
description = "REST API service for stablecoin-forge (axum), wiring HTTP to the domain service."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "forge-backend"
path = "src/main.rs"

[dependencies]
forge-core.workspace = true
forge-crypto.workspace = true
forge-ledger-custodial.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
axum.workspace = true
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio.workspace = true

[features]
# Default software TLS uses the ring provider (builds everywhere, no cmake).
default = []
# `fips` selects the CMVP-validated AWS-LC-FIPS provider for TLS (requires cmake +
# a C toolchain in the build image). See docs/FIPS-PQC.md.
fips = ["rustls/fips"]

[dev-dependencies]
tower.workspace = true
