[package]
name = "forge-crypto"
description = "FIPS/PQC CryptoProvider for stablecoin-forge: ML-DSA-65 signatures, Argon2id KEK, and canonical-JSON/HKDF/AES-GCM/SHA-384 glue with golden-vector conformance."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forge-core.workspace = true
serde.workspace = true
# preserve_order keeps canonical JSON key order stable across languages.
serde_json = { workspace = true, features = ["preserve_order"] }
hex.workspace = true
fips204.workspace = true
argon2.workspace = true
sha2.workspace = true
sha3.workspace = true
hkdf.workspace = true
aes-gcm.workspace = true
zeroize.workspace = true
