[package]
name = "forge-ledger-custodial"
description = "Custodial double-entry ledger adapter implementing forge-core's LedgerPort, with a total-supply <= reserve integrity check."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forge-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
forge-crypto.workspace = true
