[package]
name = "invar-backend"
description = "REST API service for invar (axum), wiring HTTP to the domain service."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "invar-backend"
path = "src/main.rs"

[dependencies]
invar-core.workspace = true
invar-crypto.workspace = true
invar-ledger-custodial.workspace = true
invar-ledger-sqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
axum.workspace = true
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio.workspace = true

[features]
# Default software TLS uses the ring provider (builds everywhere, no cmake).
default = []
# `pqc-tls` selects the aws-lc-rs provider, which offers hybrid post-quantum key
# exchange (X25519MLKEM768) for quantum-safe confidentiality. Requires cmake + a
# C toolchain in the build image.
pqc-tls = ["rustls/aws_lc_rs"]
# `fips` selects the CMVP-validated AWS-LC-FIPS provider for TLS (also aws-lc-rs).
# See docs/FIPS-PQC.md.
fips = ["rustls/fips"]

[dev-dependencies]
tower.workspace = true
