[package]
name = "invar-ledger-custodial"
description = "Custodial double-entry ledger adapter implementing invar-core's LedgerPort, with a total-supply <= reserve integrity check."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
invar-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
invar-crypto.workspace = true
